v0.2.1
-------------------
* added toExactlyHaveProperties

v0.2.0
-------------------
* removed built version from the repo, use `make build` to build all matchers into one file
* in the browser the matchers need to be loaded each individually, the matchers.js will warn you

v0.1.2
-------------------

* Add toBeInRange(), where the value has to be between two numbers incl. the numbers themselves.
* Added toBeOneOf(), where actual is checked against a set of expected values.
* Added toBeCloseToOneOf()
* Added toStartWithEither()
* separated all matchers+tests into reasonable files
* provide a runner-dist.html which runs all tests against the built version
* added toThrowStartsWith()
* added toStart/EndWith work with arrays now too